--- a/style.css
+++ b/style.css
@@ -10,9 +10,22 @@ h1 {
   padding: 4px;
 }
 
-#graph {
+#content > .graph.panel {
+  position: relative;
+}
+
+.graph_canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.canvas_size {
   width: 420px;
   height: 320px;
+}
+
+#graph {
   box-shadow: 1px 1px 2px;
 }
 
