--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ h1 {
 }
 
 .panel {
-  border: 1px solid #ddd;
+  border: 1px outset rgba(0, 0, 0, 0.3);
   border-radius: 4px;
   background-color: #F2F2F2;
   padding: 4px;
@@ -25,8 +25,8 @@ h1 {
   height: 320px;
 }
 
-#graph {
-  box-shadow: 1px 1px 2px;
+.panel {
+  box-shadow: 1px 1px 6px -3px rgba(0, 0, 0, 0.22), 0 0 20px -4px rgba(255, 255, 255, 0.45) inset;
 }
 
 .graph.panel {
