--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ h1 {
 }
 
 #content > .graph.panel {
-  position: relative;
 }
 
 .graph_canvas {
@@ -25,6 +24,13 @@ h1 {
   height: 320px;
 }
 
+.canvas_wrapper {
+  background-color: #fff;
+  border-radius: 3px;
+  border: 1px inset rgba(0, 0, 0, 0.3);
+  position: relative;
+}
+
 .panel {
   box-shadow: 1px 1px 6px -3px rgba(0, 0, 0, 0.22), 0 0 20px -4px rgba(255, 255, 255, 0.45) inset;
 }
@@ -33,6 +39,7 @@ h1 {
   float: left;
   margin-right: 7px;
   margin-bottom: 7px;
+  padding: 4px;
 }
 
 .info.panel {
@@ -50,6 +57,35 @@ footer {
 .panel tr > th:first-child {
   text-align: right;
   padding-right: 0.4em;
+}
+
+
+.ui.panel > .buttonbox {
+  display: inline-block;
+}
+
+.buttonbox ~ .buttonbox {
+  margin-left: 4em;
+}
+
+.buttonbox > .title {
+  display: inline-block;
+  margin-left: 1em;
+  margin-right: 0.333em;
+}
+
+.buttonbox > .title:first-child {
+  font-weight: bold;
+  margin-left: 0em;
+  margin-right: 1em;
+}
+
+.buttonbox.pointsbox {
+  float: right;
+}
+
+#num_points {
+  width: 3em;
 }
 
 #steps_per_frame {
