--- a/style.css
+++ b/style.css
@@ -29,6 +29,11 @@ h1 {
   border-radius: 3px;
   border: 1px inset rgba(0, 0, 0, 0.3);
   position: relative;
+  overflow: hidden;
+}
+
+.resizable {
+  resize: both;
 }
 
 .panel {
@@ -38,12 +43,17 @@ h1 {
 .graph.panel {
   float: left;
   margin-right: 7px;
-  margin-bottom: 7px;
   padding: 4px;
 }
 
 .info.panel {
   float: left;
+
+}
+
+.graph.panel,
+.info.panel {
+  margin-bottom: 7px;
 }
 
 .ui.panel {
