--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
 
 h1 {
   margin-top: 1.5rem;
+  padding-top: 7px;
   padding-bottom: 7px;
 }
 
@@ -137,7 +138,7 @@ td.blank {
 }
 
 #button_run {
-  min-width: 4em;
+  min-width: 4.5em;
 }
 
 #num_points {
