--- a/style.css
+++ b/style.css
@@ -41,6 +41,14 @@ h1 {
   resize: both;
 }
 
+.center {
+  text-align: center;
+}
+
+.right {
+  text-align: right;
+}
+
 .panel {
   box-shadow: 1px 1px 6px -3px rgba(0, 0, 0, 0.22), 0 0 20px -4px rgba(255, 255, 255, 0.45) inset;
 }
@@ -53,12 +61,17 @@ h1 {
 
 .info.panel {
   float: left;
-
 }
 
 .graph.panel,
 .info.panel {
   margin-bottom: 7px;
+}
+
+.info.panel > table {
+  margin-left: 7px;
+  margin-right: 7px;
+  margin-bottom: 0px;
 }
 
 .ui.panel {
@@ -167,12 +180,25 @@ td.blank {
 #point_pos_table input[type="range"],
 #all_points_table input[type="range"] {
   width: 8em;
+  margin-left: 0;
+  margin-right: 0;
 }
 
 #point_pos_table td:nth-child(3),
 #point_pos_table td:nth-child(4),
 #point_pos_table td:nth-child(5) {
   text-align: right;
+}
+
+th.move_mode,
+td.move_mode {
+  width: 24px;
+  text-align: center;
+}
+
+#point_pos_table .move_mode input[type="checkbox"] {
+  margin-left: 0;
+  margin-right: 0;
 }
 
 .highlight > td {
