--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 h1 {
-  margin-top: 1.5rem;
+  margin-top: 0.666rem;
   padding-top: 7px;
   padding-bottom: 7px;
 }
@@ -58,6 +58,10 @@ h1 {
   border: 1px inset rgba(0, 0, 0, 0.3);
   position: relative;
   overflow: hidden;
+}
+
+.clear_both {
+  clear: both;
 }
 
 .resizable {
@@ -117,6 +121,8 @@ footer {
 
 .buttonbox > .title {
   display: inline-block;
+  position: relative;
+  top: -1px;
   margin-left: 1em;
   margin-right: 0.333em;
 }
@@ -127,15 +133,55 @@ footer {
   margin-right: 1em;
 }
 
-.buttonbox.pointsbox {
+.buttonbox.bbright {
   float: right;
 }
 
-.buttonbox.pointsbox ~ hr {
-  clear: both;
+.buttonbox.bbright ~ hr {\
   margin-top: 4px;
   margin-bottom: 4px;
-  opacity: 0.18;
+  opacity: 0.15;
+}
+
+.buttonbox > label + label {
+  margin-left: 1em;
+}
+
+.buttonbox.uioptbox > label {
+  position: relative;
+  top: -1px;
+}
+
+.buttonbox input[type="checkbox"] {
+  position: relative;
+  top: 2px;
+}
+
+.optionbox {
+}
+
+.optionbox.obleft {
+  float: left;
+}
+
+.optionbox.obright {
+  float: right;
+}
+
+.optionbox > h3 {
+  float: left;
+  margin-left: 0.2rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  border: 1px outset #bbb;
+  border-radius: 3px;
+  padding: 2px 5px;
+  background-color: #ccc
+}
+
+.optionbox > table {
+  clear: left;
+  margin-left: 0.5rem;
 }
 
 .ui.panel > hr ~ h3 {
